--- a/demo-app/src/App.css
+++ b/demo-app/src/App.css
@@ -33,9 +33,19 @@
 }
 
 .revealed {
-  background: #61dafb;
+  background: linear-gradient(135deg, #87e0fd 0%,#53cbf1 40%,#05abe0 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  padding: 100px;
+  height: 100%;
 }
 
 .content {
-  background: #FAFAFA;
+  padding: 100px;
+  background: linear-gradient(135deg, rgba(241,231,103,1) 0%,rgba(254,182,69,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  height: 100%;
+  height: 500px;
+}
+
+.circular-reveal__revealContent {
+  z-index: 10000;
+  background: white;
 }
